# opengl-first-project

./: CMakeLists.txt  README.md  glad.c  main.cpp
libs/include/glad/: glad.h
